# DigiByte-Quantum-Shield-Network

./: CHANGELOG.md  CONTRIBUTING.md  DQSN Developer Documentation v2.md  DQSN Technical Specification v2.md  README.md  SECURITY.md  dqsn_core.py  dqsn_engine.py  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  CONTRACT.md  DQSN Code Blueprint v2.md  DQSN_V3_UPGRADE_PLAN.md  INDEX.md
docs/legacy/: DQSN Code Blueprint v2.md  DQSN Developer Documentation v2.md  DQSN Technical Specification v2.md  DQSN_Whitepaper_v2.md
docs/v3/: EVIDENCE_FAMILIES.md  MANIFEST.md  PROOF_PACK.md  REASON_IDS.md  RELEASE_STATUS_v3.2.0.md  TEST_MATRIX.md
dqsnetwork/: adaptive_bridge.py  advisory.py  aggregator.py  dqsn_core.py  dqsn_engine.py  exporter.py  ingest.py  models.py  scoring.py  v3.py  v3_api.py
dqsnetwork/contracts/: __init__.py  v3_2_lock.py  v3_hash.py  v3_reason_codes.py  v3_types.py
examples/: example_export.py  example_signals.json
legacy/: README.md  __init__.py  dqsn_core.py  dqsn_engine.py
tests/: test_aggregator.py  test_contract_v3_bad_number_fail_closed.py  test_contract_v3_fail_closed.py  test_contract_v3_payload_size_fail_closed.py  test_contract_v3_signal_limit_fail_closed.py  test_contract_v3_unknown_key_fail_closed.py  test_core.py  test_coverage_boost.py  test_coverage_final_push.py  test_coverage_real.py  test_coverage_v3_types_and_errors.py  test_engine.py  test_imports.py  test_v3_2_manifest_verdict_lock.py  test_v3_dedup_and_determinism.py  test_v3_full_coverage_lock.py  test_v3_more_aggregation.py  test_v3_more_fail_closed_and_dominance.py  test_v3_route_smoke.py  test_v3_signal_invalid_decision_fail_closed.py  test_v3_signal_invalid_reason_codes_fail_closed.py  test_v3_signal_invalid_risk_fail_closed.py  test_v3_types_more_edges.py  test_v3_types_more_validation.py
