[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqsnetwork"
version = "0.0.0"
description = "DigiByte Quantum Shield Network (DQSN) — Shield Contract v3 aggregation layer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "DarekDGB" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["dqsnetwork*"]
exclude = ["tests*", "docs*", "examples*"]
